==> Open-CMSIS-Pack/CMSIS-Driver_STM32/Drivers/GPIO_STM32.c <==
#include "GPIO_STM32.h"
#include "RTE_Components.h"
#include  CMSIS_device_header
#define GPIO_MAX_PORTS_NUM      (16U)
#define GPIO_MAX_PINS_NUM       ((GPIO_MAX_PORTS_NUM)*16U)
#define GPIO_SECTION_(name)     __attribute__((section(name)))
#define GPIO_SECTION            GPIO_SECTION_(GPIO_SECTION_NAME)
#define GPIO_SECTION

static int32_t GPIO_Setup (ARM_GPIO_Pin_t pin, ARM_GPIO_SignalEvent_t cb_event) {
  PinConfig_t   pin_config;
  GPIO_TypeDef *ptr_gpio;
  uint32_t      pin_pos;
  uint32_t      pin_mask;
  int32_t       ret;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return ARM_GPIO_ERROR_PIN;
  }

  ptr_gpio = gpio_addr[pin >> 4U];              // Pointer to port peripheral

  if (ptr_gpio == NULL) {                       // If port address is unknown
    return ARM_GPIO_ERROR_PIN;
  }

  pin_pos  = pin & 0x0FU;                       // Pin position on port (0 .. 15)
  pin_mask = 1U << pin_pos;                     // Pin mask on port

  if ((cb_event != NULL)                           &&
      (gpio0_rw_info.cb_event_pin[pin_pos] != 0U)  &&
      (gpio0_rw_info.cb_event_pin[pin_pos] != pin)) {
    // If callback cannot be registered because it is already allocated for another pin on the same position
    return ARM_DRIVER_ERROR;
  }

  // Set default configuration for a pin
  pin_config.dir           = ARM_GPIO_INPUT;
  pin_config.output_mode   = ARM_GPIO_PUSH_PULL;
  pin_config.pull_resistor = ARM_GPIO_PULL_NONE;
  pin_config.trigger       = ARM_GPIO_TRIGGER_NONE;

  // Deinitialize Pin to disable edge detection
  HAL_GPIO_DeInit(ptr_gpio, pin_mask);

  // By default reset pin state
  HAL_GPIO_WritePin(ptr_gpio, (uint16_t)pin_mask, GPIO_PIN_RESET);

  ret = GPIO_PinConfigure(pin, pin_config);     // Configure the pin

  if (ret == ARM_DRIVER_OK) {
    // Register or deregister callback
    if (cb_event != NULL) {                     // If callback is to be registered
      gpio0_rw_info.cb_event    [pin_pos] = cb_event;
      gpio0_rw_info.cb_event_pin[pin_pos] = pin & 0xFFU;
      pin_config.cb_registered = 1U;
    } else {                                    // If callback is to be deregistered
      gpio0_rw_info.cb_event    [pin_pos] = NULL;
      gpio0_rw_info.cb_event_pin[pin_pos] = 0U;
      pin_config.cb_registered = 0U;
    }

    gpio0_rw_info.pin_config[pin] = pin_config; // Update pin configuration information
  }

  return ret;
}

static int32_t GPIO_SetDirection (ARM_GPIO_Pin_t pin, ARM_GPIO_DIRECTION direction) {
  PinConfig_t pin_config;
  int32_t     ret;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return ARM_GPIO_ERROR_PIN;
  }

  pin_config = gpio0_rw_info.pin_config[pin];   // Load pin configuration

  pin_config.dir = direction;                   // Set direction

  ret = GPIO_PinConfigure(pin, pin_config);     // Configure the pin

  if (ret == ARM_DRIVER_OK) {
    gpio0_rw_info.pin_config[pin] = pin_config; // Update pin configuration information
  }

  return ret;
}

static int32_t GPIO_SetOutputMode (ARM_GPIO_Pin_t pin, ARM_GPIO_OUTPUT_MODE mode) {
  PinConfig_t pin_config;
  int32_t     ret;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return ARM_GPIO_ERROR_PIN;
  }

  pin_config = gpio0_rw_info.pin_config[pin];   // Load pin configuration

  pin_config.output_mode = mode;                // Set output mode

  ret = GPIO_PinConfigure(pin, pin_config);     // Configure the pin

  if (ret == ARM_DRIVER_OK) {
    gpio0_rw_info.pin_config[pin] = pin_config; // Update pin configuration information
  }

  return ret;
}

static int32_t GPIO_SetPullResistor (ARM_GPIO_Pin_t pin, ARM_GPIO_PULL_RESISTOR resistor) {
  PinConfig_t pin_config;
  int32_t     ret;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return ARM_GPIO_ERROR_PIN;
  }

  pin_config = gpio0_rw_info.pin_config[pin];   // Load pin configuration

  pin_config.pull_resistor = resistor;          // Set pull resistor mode

  ret = GPIO_PinConfigure(pin, pin_config);     // Configure the pin

  if (ret == ARM_DRIVER_OK) {
    gpio0_rw_info.pin_config[pin] = pin_config; // Update pin configuration information
  }

  return ret;
}

static int32_t GPIO_SetEventTrigger (ARM_GPIO_Pin_t pin, ARM_GPIO_EVENT_TRIGGER trigger) {
  PinConfig_t   pin_config;
  GPIO_TypeDef *ptr_gpio;
  uint32_t      pin_mask;
  int32_t       ret;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return ARM_GPIO_ERROR_PIN;
  }

  ptr_gpio = gpio_addr[pin >> 4U];              // Pointer to port peripheral

  if (ptr_gpio == NULL) {                       // If port address is unknown
    return ARM_GPIO_ERROR_PIN;
  }

  pin_mask = 1U << (pin & 0x0FU);               // Pin mask on port

  pin_config = gpio0_rw_info.pin_config[pin];   // Load pin configuration

  pin_config.trigger = trigger;                 // Set trigger

  HAL_GPIO_DeInit(ptr_gpio, pin_mask);          // Deinitialize Pin to disable edge detection

  ret = GPIO_PinConfigure(pin, pin_config);     // Configure the pin

  if (ret == ARM_DRIVER_OK) {
    gpio0_rw_info.pin_config[pin] = pin_config; // Update pin configuration information
  }

  return ret;
}

static void GPIO_SetOutput (ARM_GPIO_Pin_t pin, uint32_t val) {
  GPIO_TypeDef *ptr_gpio;
  uint32_t      pin_mask;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return;
  }

  ptr_gpio = gpio_addr[pin >> 4U];              // Pointer to port peripheral

  if (ptr_gpio == NULL) {                       // If port address is unknown
    return;
  }

  pin_mask = 1U << (pin & 0x0FU);               // Pin mask on port

  if (val == 0U) {
    HAL_GPIO_WritePin(ptr_gpio, (uint16_t)pin_mask, GPIO_PIN_RESET);
  } else {
    HAL_GPIO_WritePin(ptr_gpio, (uint16_t)pin_mask, GPIO_PIN_SET);
  }
}

static uint32_t GPIO_GetInput (ARM_GPIO_Pin_t pin) {
  GPIO_TypeDef *ptr_gpio;
  uint32_t      pin_val;
  uint32_t      pin_mask;

  if (pin >= GPIO_MAX_PINS_NUM) {               // If pin id is out-of-bounds
    return 0U;
  }

  ptr_gpio = gpio_addr[pin >> 4U];              // Pointer to port peripheral

  if (ptr_gpio == NULL) {                       // If port address is unknown
    return 0U;
  }

  pin_mask = 1U << (pin & 0x0FU);               // Pin mask on port

  pin_val = 0U;
  if (HAL_GPIO_ReadPin(ptr_gpio, (uint16_t)pin_mask) != GPIO_PIN_RESET) {
    pin_val = 1U;
  }

  return pin_val;
}

void HAL_GPIO_EXTI_Rising_Callback (uint16_t GPIO_Pin) {
  uint32_t pin_pos;

  pin_pos = POSITION_VAL(GPIO_Pin);

  if (gpio0_rw_info.cb_event[pin_pos] != NULL) {
    gpio0_rw_info.cb_event[pin_pos](gpio0_rw_info.cb_event_pin[pin_pos], ARM_GPIO_EVENT_RISING_EDGE);
  }
}

void HAL_GPIO_EXTI_Falling_Callback (uint16_t GPIO_Pin) {
  uint32_t pin_pos;

  pin_pos = POSITION_VAL(GPIO_Pin);

  if (gpio0_rw_info.cb_event[pin_pos] != NULL) {
    gpio0_rw_info.cb_event[pin_pos](gpio0_rw_info.cb_event_pin[pin_pos], ARM_GPIO_TRIGGER_FALLING_EDGE);
  }
}
