==> ARM-software/SDS-Framework/examples/framework/interface/gpio/driver/STM32U5xx/GPIO_STM32U5xx.c <==
#include "stm32u5xx_hal.h"
#include "stm32u5xx_ll_gpio.h"
#include "stm32u5xx_ll_exti.h"
#include "GPIO_STM32U5xx.h"
#define GPIO_MAX_PORTS          10U
#define GPIO_MAX_PINS           160U

void HAL_GPIO_EXTI_Rising_Callback(uint16_t GPIO_Pin) {
  uint32_t pin_num = POSITION_VAL(GPIO_Pin);

  if (SignalEvent[pin_num] != NULL) {
    SignalEvent[pin_num](((uint32_t)SignalPort[pin_num] << 4U) | pin_num, ARM_GPIO_EVENT_RISING_EDGE);
  }
}

void HAL_GPIO_EXTI_Falling_Callback(uint16_t GPIO_Pin) {
  uint32_t pin_num = POSITION_VAL(GPIO_Pin);

  if (SignalEvent[pin_num] != NULL) {
    SignalEvent[pin_num](((uint32_t)SignalPort[pin_num] << 4U) | pin_num, ARM_GPIO_TRIGGER_FALLING_EDGE);
  }
}

static int32_t GPIO_Setup (ARM_GPIO_Pin_t pin, ARM_GPIO_SignalEvent_t cb_event) {
  GPIO_TypeDef    *gpio;
  GPIO_InitTypeDef init;
  uint32_t         pin_port;
  uint32_t         pin_num;
  uint32_t         pin_mask;
  int32_t          result = ARM_DRIVER_OK;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_num  = pin & 0x0FU;
    pin_mask = 1U << pin_num;
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      if ((cb_event == NULL) || (SignalPort[pin_num] == 0xFFU) || (SignalPort[pin_num] == pin_port)) {
        init.Pin       = pin_mask;
        init.Mode      = GPIO_MODE_INPUT;
        init.Pull      = GPIO_NOPULL;
        init.Speed     = GPIO_SPEED_FREQ_HIGH;
        init.Alternate = 0U;
        GPIO_ClockEnable(gpio);
        if ((SignalPort[pin_num] == 0xFFU) || (SignalPort[pin_num] == pin_port)) {
          LL_EXTI_DisableIT_0_31(pin_mask);
        }
        HAL_GPIO_WritePin(gpio, (uint16_t)pin_mask, GPIO_PIN_RESET);
        HAL_GPIO_Init(gpio, &init);
        if (cb_event != NULL) {
          SignalEvent[pin_num] = cb_event;
          SignalPort [pin_num] = (uint8_t)pin_port;
          NVIC_EnableIRQ(EXTIx_IRQn[pin_num]);
        }
      } else {
        result = ARM_DRIVER_ERROR;
      }
    } else {
      result = ARM_GPIO_ERROR_PIN;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static int32_t GPIO_SetDirection (ARM_GPIO_Pin_t pin, ARM_GPIO_DIRECTION direction) {
  GPIO_TypeDef *gpio;
  uint32_t      pin_port;
  uint32_t      pin_mask;
  int32_t       result = ARM_DRIVER_OK;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_mask = 1U << (pin & 0x0FU);
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      switch (direction) {
        case ARM_GPIO_INPUT:
          LL_GPIO_SetPinMode(gpio, pin_mask, LL_GPIO_MODE_INPUT);
          break;
        case ARM_GPIO_OUTPUT:
          LL_GPIO_SetPinMode(gpio, pin_mask, LL_GPIO_MODE_OUTPUT);
          break;
        default:
          result = ARM_DRIVER_ERROR_PARAMETER;
          break;
      }
    } else {
      result = ARM_GPIO_ERROR_PIN;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static int32_t GPIO_SetOutputMode (ARM_GPIO_Pin_t pin, ARM_GPIO_OUTPUT_MODE mode) {
  GPIO_TypeDef *gpio;
  uint32_t      pin_port;
  uint32_t      pin_mask;
  int32_t       result = ARM_DRIVER_OK;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_mask = 1U << (pin & 0x0FU);
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      switch (mode) {
        case ARM_GPIO_PUSH_PULL:
          LL_GPIO_SetPinOutputType(gpio, pin_mask, LL_GPIO_OUTPUT_PUSHPULL);
          break;
        case ARM_GPIO_OPEN_DRAIN:
          LL_GPIO_SetPinOutputType(gpio, pin_mask, LL_GPIO_OUTPUT_OPENDRAIN);
          break;
        default:
          result = ARM_DRIVER_ERROR_PARAMETER;
          break;
      }
    } else {
      result = ARM_GPIO_ERROR_PIN;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static int32_t GPIO_SetPullResistor (ARM_GPIO_Pin_t pin, ARM_GPIO_PULL_RESISTOR resistor) {
  GPIO_TypeDef *gpio;
  uint32_t      pin_port;
  uint32_t      pin_mask;
  int32_t       result = ARM_DRIVER_OK;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_mask = 1U << (pin & 0x0FU);
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      switch (resistor) {
        case ARM_GPIO_PULL_NONE:
          LL_GPIO_SetPinPull(gpio, pin_mask, LL_GPIO_PULL_NO);
          break;
        case ARM_GPIO_PULL_UP:
          LL_GPIO_SetPinPull(gpio, pin_mask, LL_GPIO_PULL_UP);
          break;
        case ARM_GPIO_PULL_DOWN:
          LL_GPIO_SetPinPull(gpio, pin_mask, LL_GPIO_PULL_DOWN);
          break;
        default:
          result = ARM_DRIVER_ERROR_PARAMETER;
          break;
      }
    } else {
      result = ARM_GPIO_ERROR_PIN;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static int32_t GPIO_SetEventTrigger (ARM_GPIO_Pin_t pin, ARM_GPIO_EVENT_TRIGGER trigger) {
  GPIO_TypeDef *gpio;
  uint32_t      pin_port;
  uint32_t      pin_num;
  uint32_t      pin_mask;
  int32_t       result = ARM_DRIVER_OK;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_num  = pin & 0x0FU;
    pin_mask = 1U << pin_num;
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      switch (trigger) {
        case ARM_GPIO_TRIGGER_NONE:
          if (SignalPort[pin_num] == (uint8_t)pin_port) {
            LL_EXTI_DisableIT_0_31(pin_mask);
          }
          break;
        case ARM_GPIO_TRIGGER_RISING_EDGE:
          if (SignalPort[pin_num] == (uint8_t)pin_port) {
            LL_EXTI_SetEXTISource(pin_port, EXTI_input[pin_num]);
            LL_EXTI_DisableFallingTrig_0_31(pin_mask);
            LL_EXTI_EnableRisingTrig_0_31(pin_mask);
            LL_EXTI_EnableIT_0_31(pin_mask);
          }
          break;
        case ARM_GPIO_TRIGGER_FALLING_EDGE:
          if (SignalPort[pin_num] == (uint8_t)pin_port) {
            LL_EXTI_SetEXTISource(pin_port, EXTI_input[pin_num]);
            LL_EXTI_DisableRisingTrig_0_31(pin_mask);
            LL_EXTI_EnableFallingTrig_0_31(pin_mask);
            LL_EXTI_EnableIT_0_31(pin_mask);
          }
          break;
        case ARM_GPIO_TRIGGER_EITHER_EDGE:
          if (SignalPort[pin_num] == (uint8_t)pin_port) {
            LL_EXTI_SetEXTISource(pin_port, EXTI_input[pin_num]);
            LL_EXTI_EnableRisingTrig_0_31(pin_mask);
            LL_EXTI_EnableFallingTrig_0_31(pin_mask);
            LL_EXTI_EnableIT_0_31(pin_mask);
          }
          break;
        default:
          result = ARM_DRIVER_ERROR_PARAMETER;
          break;
      }
    } else {
      result = ARM_GPIO_ERROR_PIN;
    }
  } else {
    result = ARM_GPIO_ERROR_PIN;
  }

  return result;
}

static void GPIO_SetOutput (ARM_GPIO_Pin_t pin, uint32_t val) {
  GPIO_TypeDef *gpio;
  uint32_t      pin_port;
  uint32_t      pin_mask;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_mask = 1U << (pin & 0x0FU);
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      HAL_GPIO_WritePin(gpio, (uint16_t)pin_mask, (val != 0U) ? GPIO_PIN_SET : GPIO_PIN_RESET);
    }
  }
}

static uint32_t GPIO_GetInput (ARM_GPIO_Pin_t pin) {
  GPIO_TypeDef *gpio;
  GPIO_PinState pin_state;
  uint32_t      pin_port;
  uint32_t      pin_mask;
  uint32_t      val = 0U;

  if (pin < GPIO_MAX_PINS) {
    pin_port = pin >> 4U;
    pin_mask = 1U << (pin & 0x0FU);
    gpio = GPIOx[pin_port];
    if (gpio != NULL) {
      pin_state = HAL_GPIO_ReadPin(gpio, (uint16_t)pin_mask);
      if (pin_state == GPIO_PIN_SET) {
        val = 1U;
      }
    }
  }
  return val;
}
